manifests/apicalculator-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-calculator

spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-calculator
  template:
    metadata:
      labels:
       app: "api-calculator"
    spec:
      containers:
      - name: api-calculator
        image: "a5a5a9/api-calculator:latest"
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        imagePullPolicy: Always
