manifests/apicalculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-calculator

  labels:
    app: api-calculator
spec:
  selector:
    app: api-calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
